[gd_scene load_steps=5 format=3 uid="uid://b0qq7xnth5dmt"]

[ext_resource type="Script" path="res://Scenes/Utils/TextBox/text_box.gd" id="1_lcxw7"]
[ext_resource type="Texture2D" uid="uid://blkh38inh8ex" path="res://Assets/Graphics/TextBox/text_box_bg.png" id="2_otx8l"]
[ext_resource type="Texture2D" uid="uid://biv83h3la8ba7" path="res://Assets/Graphics/TextBox/text_box_tail.png" id="3_0c1tf"]
[ext_resource type="Theme" uid="uid://cdgll2umerlv0" path="res://Theme/text_box_theme.tres" id="3_qi8sm"]

[node name="TextBox" type="MarginContainer"]
z_index = 2
script = ExtResource("1_lcxw7")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_otx8l")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Control" type="Control" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect/Control"]
position = Vector2(20, 44)
texture = ExtResource("3_0c1tf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Message" type="Label" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("3_qi8sm")
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
